.local/state/nvim/conform.log
2025-09-25 19:39:01[WARN] Formatter 'prettierd' timeout
2025-09-25 19:39:02[WARN] Formatter 'prettierd' timeout
2025-09-25 19:39:02[ERROR] Formatter 'prettierd' error: SyntaxError: The input should contain exactly one expression, but the first expression is followed by the unexpected character `"`. (55:1)
[0m [90m 53 |[39m }
 [90m 54 |[39m
[31m[1m>[22m[39m[90m 55 |[39m [32m"window-rules"[39m[33m:[39m [
 [90m    |[39m [31m[1m^[22m[39m
 [90m 56 |[39m   {
 [90m 57 |[39m     [32m"app-id"[39m[33m:[39m [32m"com.googlecode.iterm2"[39m[33m,[39m
 [90m 58 |[39m     [32m"workspace"[39m[33m:[39m [32m"term"[39m[33m,[39m[0m

2025-09-25 19:39:02[ERROR] Formatter 'prettierd' error: SyntaxError: The input should contain exactly one expression, but the first expression is followed by the unexpected character `"`. (55:1)
[0m [90m 53 |[39m }
 [90m 54 |[39m
[31m[1m>[22m[39m[90m 55 |[39m [32m"window-rules"[39m[33m:[39m [
 [90m    |[39m [31m[1m^[22m[39m
 [90m 56 |[39m   {
 [90m 57 |[39m     [32m"app-id"[39m[33m:[39m [32m"com.googlecode.iterm2"[39m[33m,[39m
 [90m 58 |[39m     [32m"workspace"[39m[33m:[39m [32m"term"[39m[33m,[39m[0m

2025-09-25 20:23:38[ERROR] Formatter 'shfmt' error: /Users/gravity/.config/borders/bordersrc:5:10: array element values must be words

2025-09-25 20:23:38[ERROR] Formatter 'shfmt' error: /Users/gravity/.config/borders/bordersrc:5:10: array element values must be words

2025-10-12 02:23:45[WARN] Formatter 'prettierd' timeout
2025-11-04 00:43:45[WARN] Formatter 'prettierd' timeout
2025-11-05 12:54:02[WARN] Formatter 'prettierd' timeout
2025-11-05 12:54:03[WARN] Formatter 'prettierd' timeout
2025-12-03 13:55:00[ERROR] Formatter 'prettierd' error: UndefinedParserError: No parser could be inferred for file "/Users/gravity/Documents/mirror/Work/Semester_3/Advanced_Simulation_machinelearning/tif345/assignments/project-2a/project2a_clean.ipynb".

2025-12-03 13:55:00[ERROR] Formatter 'prettierd' error: UndefinedParserError: No parser could be inferred for file "/Users/gravity/Documents/mirror/Work/Semester_3/Advanced_Simulation_machinelearning/tif345/assignments/project-2a/project2a_clean.ipynb".

2025-12-18 01:35:22[WARN] Formatter 'prettierd' timeout
2026-01-29 13:14:03[ERROR] Formatter 'prettierd' error: node:internal/modules/cjs/loader:1368
  throw err;
  ^

Error: Cannot find module '../dist/prettierd.js'
Require stack:
- /Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd
    at Function._resolveFilename (node:internal/modules/cjs/loader:1365:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1021:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1026:22)
    at Function._load (node:internal/modules/cjs/loader:1175:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd:4:1)
    at Module._compile (node:internal/modules/cjs/loader:1688:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ '/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd' ]
}

Node.js v22.18.0

2026-01-29 13:14:03[ERROR] Formatter 'prettierd' error: node:internal/modules/cjs/loader:1368
  throw err;
  ^

Error: Cannot find module '../dist/prettierd.js'
Require stack:
- /Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd
    at Function._resolveFilename (node:internal/modules/cjs/loader:1365:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1021:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1026:22)
    at Function._load (node:internal/modules/cjs/loader:1175:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd:4:1)
    at Module._compile (node:internal/modules/cjs/loader:1688:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ '/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd' ]
}

Node.js v22.18.0

2026-01-29 13:33:43[ERROR] Formatter 'prettierd' error: node:internal/modules/cjs/loader:1368
  throw err;
  ^

Error: Cannot find module '../dist/prettierd.js'
Require stack:
- /Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd
    at Function._resolveFilename (node:internal/modules/cjs/loader:1365:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1021:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1026:22)
    at Function._load (node:internal/modules/cjs/loader:1175:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd:4:1)
    at Module._compile (node:internal/modules/cjs/loader:1688:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ '/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd' ]
}

Node.js v22.18.0

2026-01-29 13:33:43[ERROR] Formatter 'prettierd' error: node:internal/modules/cjs/loader:1368
  throw err;
  ^

Error: Cannot find module '../dist/prettierd.js'
Require stack:
- /Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd
    at Function._resolveFilename (node:internal/modules/cjs/loader:1365:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1021:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1026:22)
    at Function._load (node:internal/modules/cjs/loader:1175:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd:4:1)
    at Module._compile (node:internal/modules/cjs/loader:1688:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ '/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd' ]
}

Node.js v22.18.0

2026-01-29 14:01:52[ERROR] Formatter 'prettierd' error: node:internal/modules/cjs/loader:1368
  throw err;
  ^

Error: Cannot find module '../dist/prettierd.js'
Require stack:
- /Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd
    at Function._resolveFilename (node:internal/modules/cjs/loader:1365:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1021:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1026:22)
    at Function._load (node:internal/modules/cjs/loader:1175:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd:4:1)
    at Module._compile (node:internal/modules/cjs/loader:1688:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ '/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd' ]
}

Node.js v22.18.0

2026-01-29 14:01:52[ERROR] Formatter 'prettierd' error: node:internal/modules/cjs/loader:1368
  throw err;
  ^

Error: Cannot find module '../dist/prettierd.js'
Require stack:
- /Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd
    at Function._resolveFilename (node:internal/modules/cjs/loader:1365:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1021:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1026:22)
    at Function._load (node:internal/modules/cjs/loader:1175:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd:4:1)
    at Module._compile (node:internal/modules/cjs/loader:1688:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ '/Users/gravity/dotfiles/.local/share/nvim/mason/bin/prettierd' ]
}

Node.js v22.18.0

